--- a/blog.html
+++ b/blog.html
@@ -60,6 +60,149 @@
             <div class="row">
 
                 <div class="col-xs-12 col-sm-9">
+                <img src="images/icon1.png" class="iconosblog">
+                    <div class="margin10">
+                        <img src="images/post1.png">
+                            <div class="row">
+                                <div class="col-xs-4">
+                                    <h4>DATE</h4>
+                                    April 15, 2013
+                                    <h4>TAGS</h4>
+                                    Website | Design
+                                    <h4>COMMENTS</h4>
+                                    4
+                                </div>
+
+                                <div class="col-xs-8">  
+                                    <h3> TOP WORDPRESS THEMES OF 2013</h3>
+                                    <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                    <br>
+                                    <br>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                    cillum dolore eu fugiat nulla pariatur. 
+                                    </p> 
+                                </div>  
+                            </div>
+                        </div>
+
+                        <section id="barrablog"> </section>
+
+                        <img src="images/icon2.png" class="iconosblog">
+                        <div class="margin10">
+                            <img src="images/post2.png">
+                            <div class="row">
+                                <div class="col-xs-4">
+                                    <h4>DATE</h4>
+                                    April 15, 2013
+                                    <h4>TAGS</h4>
+                                    Website | Design
+                                    <h4>COMMENTS</h4>
+                                    4
+                                </div>
+
+                                <div class="col-xs-8">  
+                                    <h3> TOP WORDPRESS THEMES OF 2013</h3>
+                                    <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                    <br>
+                                    <br>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                    cillum dolore eu fugiat nulla pariatur. 
+                                    </p> 
+                                </div>
+                            </div>
+                        </div>
+
+                        <section id="barrablog"> </section>
+
+                        <img src="images/icon3.png" class="iconosblog">
+                        <div class="margin10">
+                            <iframe src="https://player.vimeo.com/video/1084537" width="100%" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            <div class="row">
+                                <div class="col-xs-4">
+                                    <h4>DATE</h4>
+                                    April 15, 2013
+                                    <h4>TAGS</h4>
+                                    Website | Design
+                                    <h4>COMMENTS</h4>
+                                    4
+                                </div>
+
+                                <div class="col-xs-8">  
+                                    <h3> TOP WORDPRESS THEMES OF 2013</h3>
+                                    <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                    <br>
+                                    <br>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                    cillum dolore eu fugiat nulla pariatur. 
+                                    </p> 
+                                </div>
+                            </div>
+                        </div>
+
+                        <section id="barrablog"> </section>
+
+                        <img src="images/icon3.png" class="iconosblog">
+                        <div class="margin10">
+                            <div class="well">
+                                <img src="images/quote.png" class="quote">
+                                
+                                <blockquote>
+                                    Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                    cillum dolore eu fugiat nulla pariatur. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                    cillum dolore eu fugiat nulla pariatur.
+                                </blockquote>   
+                            </div>
+                        </div>
+
+                        <section id="barrablog"> </section>
+
+                        <img src="images/icon3.png" class="iconosblog">
+                        <div class="margin10">
+                            <h3> SOME OF THE BEST FREEBIES ON THE WEB</h3>
+                            <h6><a href="#">www.bestpsfreebies.com</a></h6>
+                            <br>
+                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                    cillum dolore eu fugiat nulla pariatur. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                    cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
+
+                         <section id="barrablog"> </section>
+
+                         <ul class="pagination pagination-lg">
+                            <li class="active activepag">
+                                <span>1 <span class="sr-only">(página actual)</span></span>
+                            </li>
+                            <li><a href="#" class="pagorange">2</a></li>
+                            <li><a href="#" class="pagorange">3</a></li>
+ 
+                        </ul>
 
                 </div>
 
