--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,49 @@
                 <div class="col-xs-12 col-sm-9">
                 <img src="images/icon1.png" class="iconosblog">
                     <div class="margin10">
-                        <img src="images/post1.png">
+                       <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                            <li data-target="#myCarousel" data-slide-to="3"></li>
+                            <li data-target="#myCarousel" data-slide-to="4"></li>
+                        </ol>
+
+                     <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item itemblog active">
+                              <img src="images/slider.jpg">
+                            </div>
+
+                            <div class="item itemblog">
+                              <img src="images/big/pic5.jpg">
+                            </div>
+
+                            <div class="item itemblog">
+                              <img src="images/big/pic6.jpg">
+                            </div>
+
+                            <div class="item itemblog">
+                              <img src="images/big/pic7.jpg">
+                            </div>
+
+                            <div class="item itemblog">
+                              <img src="images/big/pic8.jpg">
+                            </div>
+                        </div>
+
+                    <!-- Left and right controls -->
+                        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"><img src="images/icon-63231.png"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"><img src="images/icon-63331.png"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
                             <div class="row">
                                 <div class="col-xs-4">
                                     <h4>DATE</h4>
